// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-button example 1 1`] = `
<table
  style={
    Object {
      "background": "#f7f8fa",
      "textAlign": "center",
    }
  }
>
  <thead>
    <tr>
      <th />
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Default
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Hovered/
        <br />
        Focused
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Active/
        <br />
        Pressed
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Disabled
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Primary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_r594hu"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_r594hu-o_O-focus_653n95"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_r594hu-o_O-active_ggw6ry"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_r594hu-o_O-disabled_1w7pcko"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Secondary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_nhzqyc"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_nhzqyc-o_O-focus_1tokxmj"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_nhzqyc-o_O-active_1r3agrx"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_nhzqyc-o_O-disabled_1rke1mr"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Tertiary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_1hnxdow"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1hnxdow-o_O-focus_1xgwdxn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1hnxdow-o_O-active_1udmvi8"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_1hnxdow-o_O-disabled_ehqzfp"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`wonder-blocks-button example 2 1`] = `
<table
  style={
    Object {
      "background": "#1865f2",
      "color": "#ffffff",
      "textAlign": "center",
    }
  }
>
  <thead>
    <tr>
      <th />
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Default
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Hovered/
        <br />
        Focused
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Active/
        <br />
        Pressed
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Disabled
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Primary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_1imy9aa"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1imy9aa-o_O-focus_1a3epdz"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1imy9aa-o_O-active_rhtw9a"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_1imy9aa-o_O-disabled_1bghbg4"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Secondary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_1shc7ui"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1shc7ui-o_O-focus_gvewhn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1shc7ui-o_O-active_1bd05sv"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_1shc7ui-o_O-disabled_1rprq5f"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Tertiary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_t7qze6"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_t7qze6-o_O-focus_pqzh2t"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_t7qze6-o_O-active_169x9f6"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_t7qze6-o_O-disabled_1p0v4sy"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`wonder-blocks-button example 3 1`] = `
<table
  style={
    Object {
      "background": "#f7f8fa",
      "textAlign": "center",
    }
  }
>
  <thead>
    <tr>
      <th />
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Default
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Hovered/
        <br />
        Focused
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Active/
        <br />
        Pressed
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Disabled
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Primary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_tdur71"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_tdur71-o_O-focus_1aqalti"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_tdur71-o_O-active_o202oj"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_tdur71-o_O-disabled_1w7pcko"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Secondary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_jnoznf"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_jnoznf-o_O-focus_oj5g4"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_jnoznf-o_O-active_16aybtn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_jnoznf-o_O-disabled_1rke1mr"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Tertiary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_1mhrujj"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1mhrujj-o_O-focus_flt1z8"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1mhrujj-o_O-active_esl9fv"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_1mhrujj-o_O-disabled_ehqzfp"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`wonder-blocks-button example 4 1`] = `
<table
  style={
    Object {
      "background": "#d92916",
      "color": "#ffffff",
      "textAlign": "center",
    }
  }
>
  <thead>
    <tr>
      <th />
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Default
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Hovered/
        <br />
        Focused
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Active/
        <br />
        Pressed
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Disabled
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Primary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_d2y3ot"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_d2y3ot-o_O-focus_1a3epdz"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_d2y3ot-o_O-active_1h9ov83"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_d2y3ot-o_O-disabled_qkki4b"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Secondary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_1shc7ui"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1shc7ui-o_O-focus_cyoct0"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1shc7ui-o_O-active_yk48z8"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_1shc7ui-o_O-disabled_1rprq5f"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Tertiary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_t7qze6"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_t7qze6-o_O-focus_pqzh2t"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_t7qze6-o_O-active_pekw78"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_t7qze6-o_O-disabled_1p0v4sy"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`wonder-blocks-button example 5 1`] = `
<table
  style={
    Object {
      "background": "#f7f8fa",
      "textAlign": "center",
    }
  }
>
  <thead>
    <tr>
      <th />
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Default
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Hovered/
        <br />
        Focused
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Active/
        <br />
        Pressed
      </th>
      <th
        style={
          Object {
            "width": 100,
          }
        }
      >
        Disabled
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Primary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_r594hu-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_r594hu-o_O-focus_653n95-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_r594hu-o_O-active_ggw6ry-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_r594hu-o_O-disabled_1w7pcko-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Secondary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_nhzqyc-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_nhzqyc-o_O-focus_1tokxmj-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_nhzqyc-o_O-active_1r3agrx-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_nhzqyc-o_O-disabled_1rke1mr-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 60,
          "verticalAlign": "middle",
        }
      }
    >
      <th>
        Tertiary
      </th>
      <td>
        <button
          className="shared_ew9he-o_O-default_1hnxdow-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1hnxdow-o_O-focus_1xgwdxn-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-default_1hnxdow-o_O-active_1udmvi8-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={false}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
      <td>
        <button
          className="shared_ew9he-o_O-disabled_mqm918-o_O-default_1hnxdow-o_O-disabled_ehqzfp-o_O-small_xwkmkn"
          data-test-id={undefined}
          disabled={true}
          href={undefined}
        >
          <span
            className=""
            id={undefined}
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": 700,
                "lineHeight": "20px",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;
